--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,4 +24,7 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/create/, role: ROLE_ADMIN }
+        - { path: ^/new/, role: ROLE_ADMIN }
+        - { path: ^/edit/, role: ROLE_ADMIN }
+        - { path: ^/delete/, role: ROLE_ADMIN }
