--- a/src/Ema/GroBlogBundle/Resources/config/routing.yml
+++ b/src/Ema/GroBlogBundle/Resources/config/routing.yml
@@ -23,7 +23,7 @@ delete:
     defaults: { _controller: EmaGroBlogBundle:Blog:delete }
 
 post:
-    path:     /post/{iddupost}
+    path:     /post/{slug}
     defaults: { _controller: EmaGroBlogBundle:Blog:post }
     requirements:
             iddupost:  \d+
